# flight-plan-overview

./: CHANGELOG.md  README.md  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Container/: index.tsx  styles.module.css
src/components/Input/: index.tsx  styles.module.css
src/components/Output/: index.tsx
src/layouts/Main/: index.tsx
src/routes/: index.tsx
src/screens/: index.ts
src/screens/Checklist/: index.tsx
src/screens/FlightPlan/: fallback.tsx  index.tsx  styles.module.css  utils.ts
src/screens/FlightPlan/components/: index.ts
src/screens/FlightPlan/components/AirportInfo/: index.tsx  styles.module.css
src/screens/FlightPlan/components/InfoBox/: index.tsx  styles.module.css
src/screens/Settings/: index.tsx
src/store/: index.ts
src/store/slices/: index.ts  settings.ts  simbrief.ts
src/types/: simbrief.ts
src/utils/: index.ts
